feat(customer-service): add integration tests with Testcontainers and EmbeddedKafka (Section 9)
- CustomerServiceApplicationTests: REST CRUD integration tests with PostgreSQL + Kafka
- CustomerSagaConsumerTest: SAGA consumer validation via EmbeddedKafka
- Fix bean name collision in CustomerSagaConsumer (class vs @Bean)
- Add test dependencies (restclient, resttestclient, webmvc)
- Use Java 25 unnamed pattern variables (_) in CustomerService
- Use List.getFirst() in CustomerServiceTest